--- a/div_span.html
+++ b/div_span.html
@@ -19,6 +19,14 @@
 			background-color: orange;
 		}
 
+		#rodape{
+			background: green;
+		}
+
+		#assinatura{
+			background: pink;
+		}
+
 		.produto{
 			background-color: gray;
 			margin: 10px;
@@ -47,8 +55,17 @@
 			
 		</div>
 
+		<div id="rodape">
+			
+			Todos os direitos reservados
+
+		</div>
+
 	</div>
 
+	<span id="assinatura">
+		Erik
+	</span>
 		<hr>
 
 </body>
