--- a/borda.html
+++ b/borda.html
@@ -8,7 +8,10 @@
 	<style type="text/css">
 		
 		#conteudo{
-			border: 10px double red;
+			/*border: 10px double red;*/
+			border-color: red green yellow blue;
+			border-width: 15px 10px 5px 1px;
+			border-style: solid;
 		}
 
 	</style>
